fixed mantis sticky overflow..

--- a/other/less/balasis.less
+++ b/other/less/balasis.less
@@ -573,6 +573,7 @@ height:auto;
     #jhomePageFunFacts{
         opacity:0;
         pointer-events: none;
+      
     }
 
 }
@@ -664,6 +665,11 @@ height:auto;
         column-gap: 30px;
         font-size:10pt;
     }
+
+#jhomePageFunFacts{
+    display:none;
+}
+
 }
 
 
